# ato

./: .env  .replit  clone_and_setup.sh  package-lock.json  package.json  server.js
ato/: cleanup.sh  package.json  pyproject.toml  vite.config.ts
ato/client/src/components/dashboard/: InterfaceStatus.tsx  InterfaceTable.tsx  SystemMetrics.tsx
ato/client/src/pages/: dashboard.tsx
ato/modules/: __init__.py  data_processor.py  device_info.py  logger.py  visualizer.py
ato/server/: db.ts  index.ts  routes.ts  vite.ts
ato/server/services/: index.ts  mikrotik.ts
ato/server/services/traffic-analyzer/: index.ts  parser.ts  visualizer.ts
ato/shared/: schema.ts
